--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,8 +1,8 @@
 .FooterBody{
     width:100%;
-    height: 10%;
+    height: 30vh;
     background-color : #575555;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     padding-left: 24px;
