[Add]RegisterPageでAPIへのリクエストを送る処理まで完了

--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -7,3 +7,8 @@
     display: flex;
     flex-direction: column;
 }
+.LoginLoadingBox{
+    position: absolute;
+    z-index:2;
+    filter: opacity(100%);
+}
