--- a/src/css/RegisterUser.css
+++ b/src/css/RegisterUser.css
@@ -1,3 +1,10 @@
+.RegisterUserWrapper{
+    min-height: 30vh;
+    position: relative;/*←相対位置*/
+    padding-top: 10vh;
+    padding-bottom: 30vh;
+    box-sizing: border-box;/*←全て含めてmin-height:100vhに*/
+}
 .RegisterUserBody{
     margin: 10% 20%;
     padding: 5%;
