--- a/src/css/Review.css
+++ b/src/css/Review.css
@@ -1,3 +1,10 @@
+.ReviewWrapper{
+    min-height: 100vh;
+    position: relative;
+    padding-top: 10vh;
+    padding-bottom: 30vh;
+    box-sizing: border-box;
+}
 .ReviewBody{
     margin-left:20%;
     margin-right:20%;
