[Add]IndexのLatestレビュー項目を更新

--- a/src/css/Index.css
+++ b/src/css/Index.css
@@ -48,7 +48,7 @@
     width:30%;
     padding-top: 1%;
     padding-left:1%;
-    height:30vh;
+    min-height:30vh;
     margin-left: 2.5%;
     margin-right: 2.5%;
     
